Fixed page title alignment

--- a/Css/style.css
+++ b/Css/style.css
@@ -18,7 +18,7 @@ body {
 header#main-header img {
     block-size: 150px;
     display: block;
-    margin: 25px;
+    margin: 5vh;
 }
 
 header#main-header a {
@@ -39,8 +39,8 @@ header#main-header {
 }
 
 header#main-header h1 {
-    margin-top: 50px;
-    padding-top: 25px;
+    margin-top: 5vh;
+    padding-top: 45px;
     font-variant: all-small-caps;
     min-inline-size: max-content;
 }
@@ -732,7 +732,6 @@ footer.mainfooter {
     width: 85%;
     margin-left: 13vw;
     padding-top: 10px;
-    /* padding-bottom: 70%; */
     justify-content: center;
     align-items: center;
     align-self: center;
@@ -748,7 +747,6 @@ footer.mainfooter {
         width: 75%;
         margin-left: 25vw;
         padding-top: 10px;
-        /* padding-bottom: 70%; */
         justify-content: center;
         align-items: center;
         align-self: center;
@@ -779,9 +777,7 @@ footer.mainfooter {
         text-transform: capitalize;
         box-sizing: border-box;
     }
-    .container{
-        margin-block-end: ;
-    }
+    
 }
 /* Twitter feed conatiner */
 .twitter-container{
